Fix about me to be more responsive on tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -733,7 +733,7 @@ select {
   }
 
   #about-me {
-    padding: 60px 0 60px 0;
+    padding: 60px 0 150px 0;
   }
 
   .footer-distributed {
